fix java udf
Signed-off-by: xxchan <xxchan22f@gmail.com>